--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
 sources:
-  libsrtp-1.5.3.tar.gz: 8e58e8a8a5207a2250e001a433ae5e23ec1bd2fa
-  srtp-1.4.4.tgz: 299c6cfe0c9d6f1804bc5921cfbdb6a6bc76a521
+  v1.5.4.tar.gz: 568030da728a03b1d39d3dc1a5c31c3228fa73d5
